[project]
name = "langgraph-csv-analyst"
version = "0.1.0"
description = "A CSV analysis tool using LangGraph multi-agent pipeline for automated data profiling, trend analysis, and anomaly detection"
authors = [
    { name = "Erishen Sun" }
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
keywords = ["langgraph", "csv", "analysis", "multi-agent", "data"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "investkit-utils",
    "langgraph>=0.2.0,<1.0.0",
    "langchain>=0.3.0,<1.0.0",
    "langchain-core>=0.3.0,<1.0.0",
    "langchain-openai>=0.2.0,<1.0.0",
    "langchain-ollama>=0.2.0,<1.0.0",
    "pandas>=2.0.0,<3.0.0",
    "plotly>=5.18.0,<6.0.0",
    "fastapi>=0.110.0,<1.0.0",
    "uvicorn>=0.27.0,<1.0.0",
    "python-multipart>=0.0.9,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "rich>=13.0.0,<15.0.0",
    "typer>=0.9.0,<1.0.0",
    "chardet>=5.0.0,<6.0.0",
    "markdown>=3.5.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=7.1.0",
    "mypy>=1.0.0",
    "bandit>=1.9.0",
]

[project.scripts]
langgraph-analyst = "langgraph_csv_analyst.cli:app"
langgraph-analyst-api = "langgraph_csv_analyst.api:run_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/langgraph_csv_analyst"]

[tool.uv]
package = true
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=7.1.0",
    "mypy>=1.0.0",
    "bandit>=1.9.0",
]

[tool.ruff.lint.isort]
known-first-party = ["langgraph_csv_analyst"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.uv.sources]
investkit-utils = { workspace = true }
